WordPress.org Themes: Prevent rating bars from overflowing their container.
The overflow has happened occasionally and briefly due to caching.

Props gk.loveweb, SergeyBiryukov.
Fixes #2022.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@5699 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-themes/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-themes/style.css
@@ -702,6 +702,7 @@ body.author .theme-browser .theme .theme-author  {
 	width: 64%;
 	width: -webkit-calc(100% - 88px);
 	width: calc(100% - 88px);
+	overflow: hidden;
 }
 .theme-ratings .counter-bar {
 	background-color: #ffc733;
